# CardFileFlask

./: README.md  console_Client.py  data.dir  data.pickle  function.py  lab4.py  main.py  run.cmd  run.sh  runclient.cmd  runclient.sh
QtClients/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  qrest.cpp  qrest.h
QtClients/asm2204/st08/: dialog220408.cpp  dialog220408.h  dialog220408.ui  group220408.cpp  group220408.h
app/: __init__.py
app/asm2204/st08/: __init__.py
app/asm2204/st08/input_output/: Console.py  File.py  FlaskForm.py  MyDatabase.py
app/asm2204/st08/model/: group.py  reader.py  user.py  writer.py
app/templates/asm2204/st00/: index.tpl
app/templates/asm2204/st15/: add.html  base.html  form.html  group.html  header.html  item.html
app/templates/asm2204/st21/: index.html
app/templates/asm2204/st25/: base.tpl  footer.tpl  form.tpl  header.tpl  team.tpl  team_member.tpl
app/templates/asm2204/st26/: add.html  base.html  cars.html  form.html  header.html  item.html
clients/asm2204/st08/: function.py  main.py
clients/asm2204/st08/input_output/: Console.py  File.py  FileShelve.py  RestApi.py
clients/asm2204/st08/model/: reader.py  writer.py
data/asm2204/st08/: data.pickle  person_data.sqlite3
data/asm2204/st08/LR1_data/: data.bak  data.pickle
input_output/: AbClass.py  Console.py  File.py  FileShelve.py  FlaskForm.py
model/: __init__.py  group.py  reader.py  writer.py
static/js/: table.js
templates/: add_person.html  base.html  card.html  edite_person.html  index.html  table.html
(+13 files in other folders)
